Atallah Alotaibi&Mohammed Alotaibi

--- a/restaurants/templates/detail.html
+++ b/restaurants/templates/detail.html
@@ -17,12 +17,20 @@
     <p class="card-text">Closing Time: {{restaurant.closing_time}}</p>
     <div class="row text-center">
         <div class="col-md-6">
+            <a href="{% url 'item-create' restaurant.id %}" class="btn btn-outline-primary btn-info">Create</a>
+        </div>
+        <div class="col-md-6">
             <a href="{% url 'restaurant-update' restaurant.id %}" class="btn btn-outline-primary btn-block">Update</a>
         </div>
         <div class="col-md-6">
             <a href="{% url 'restaurant-delete' restaurant.id %}" class="btn btn-outline-danger btn-block">Delete</a>
         </div>
     </div>
+    {% for item in items %}
+    <li>{{item.name}}</li>
+    <li>{{item.description}}</li>
+    <li>{{item.price}}</li>
+    {% endfor %}
   </div>
 </div>
 {% endblock content %}
